# data-engineering-101

./: .gitignore  Dockerfile  notes.md  pyproject.toml
infrastructure/dev/: main.tf
infrastructure/modules/network/: main.tf  variables.tf
lessons/1/: first_data_pipeline.py
lessons/one/: README.md  first_data_pipeline.py
web_server/: main.py
web_server/lessons/one/: first_data_pipeline.py
web_server/pages/: first.md  first_data_pipeline.md
web_server/templates/: base.html  index.html  page.html
