[tool.poetry]
name = "data_engineering_101"
version = "0.1.0"
description = ""
authors = ["daniel <daniel.farrugia@propelleraero.com.au>"]

[tool.poetry.dependencies]
python = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
