[tool.poetry]
name = "data_engineering_101"
version = "0.1.0"
description = ""
authors = ["daniel <daniel.farrugia@propelleraero.com.au>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Flask = "^1.1.2"
Flask-FlatPages = "^0.7.2"
requests = "^2.25.1"
Pygments = "^2.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
